// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FilterWallets should render 1`] = `
<div>
  <div
    class="text-left"
  >
    <div
      class="mb-8"
    >
      <div
        class="mb-3 font-semibold text-theme-neutral-700"
      >
        Filter Network
      </div>
      <div
        class="text-sm text-theme-neutral-500"
      >
        Select the types of networks
      </div>
    </div>
    <div>
      <ul
        class="inline-block"
        data-testid="network__option"
      />
      <div
        class="sc-AxiKw jQtkkF relative ml-2 cursor-pointer border-theme-primary-100"
        data-testid="network__viewall"
      >
        <div
          class="text-sm font-semibold text-theme-primary-500"
        >
          All
        </div>
        <span
          class="sc-AxirZ nnMcM flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle absolute bg-theme-background border-transparent border-theme-primary-100 -bottom-1 -right-4 text-theme-primary-500"
        >
          <div
            class="sc-AxjAm kzGOk"
            height="18"
            width="18"
          >
            <svg>
              chevron-down.svg
            </svg>
          </div>
          <span />
        </span>
      </div>
    </div>
    <div
      class="border-t border-1 border-theme-neutral-200 border-dotted my-8"
    />
    <div
      class="flex flex-row mb-8"
    >
      <div
        class="w-4/5"
      >
        <div
          class="mb-3 font-semibold text-theme-neutral-700"
        >
          Your Wallets
        </div>
        <div
          class="text-sm text-theme-neutral-500"
        >
          Select the display of your wallets
        </div>
      </div>
      <div
        class="w-1/5 text-right"
      >
        <div
          class="relative h-6 mt-3 mr-5 cursor-pointer text-theme-neutral-700"
          data-testid="filter-wallets__wallets"
        >
          <span
            class="font-semibold inline-block pr-1"
          >
            All
          </span>
          <span
            class="sc-AxirZ nnMcM flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle absolute bg-theme-background border-transparent top-1 -right-6"
          >
            <div
              class="sc-AxjAm dXzKNE"
              height="19"
              width="19"
            >
              <svg>
                chevron-down.svg
              </svg>
            </div>
            <span />
          </span>
        </div>
      </div>
    </div>
    <div
      class="border-t border-1 border-theme-neutral-200 border-dotted my-8"
    />
    <div
      class="flex flex-row mb-6"
    >
      <div
        class="w-4/5"
      >
        <div
          class="mb-3 font-semibold text-theme-neutral-700"
        >
          Portfolio Chart
        </div>
        <div
          class="text-sm text-theme-neutral-500"
        >
          You an hide this unit if you like
        </div>
      </div>
      <div
        class="w-1/5 pt-3 text-right"
      >
        <label>
          <input
            class="sc-AxhCb crfxJX"
            data-testid="filter-wallets_toggle--portfolio"
            type="checkbox"
          />
          <div
            class="sc-AxhUy gvyvto"
          >
            <span
              class="sc-AxgMl gXZfaE"
            />
          </div>
        </label>
      </div>
    </div>
    <div
      class="flex flex-row mb-4"
    >
      <div
        class="w-4/5"
      >
        <div
          class="mb-3 font-semibold text-theme-neutral-700"
        >
          Transaction History
        </div>
        <div
          class="text-sm text-theme-neutral-500"
        >
          You can hide this unit if you like
        </div>
      </div>
      <div
        class="w-1/5 pt-3 text-right"
      >
        <label>
          <input
            class="sc-AxhCb crfxJX"
            data-testid="filter-wallets_toggle--transactions"
            type="checkbox"
          />
          <div
            class="sc-AxhUy gvyvto"
          >
            <span
              class="sc-AxgMl gXZfaE"
            />
          </div>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`FilterWallets should render with networks selection 1`] = `
<div>
  <div
    class="text-left"
  >
    <div
      class="mb-8"
    >
      <div
        class="mb-3 font-semibold text-theme-neutral-700"
      >
        Filter Network
      </div>
      <div
        class="text-sm text-theme-neutral-500"
      >
        Select the types of networks
      </div>
    </div>
    <div>
      <ul
        class="inline-block"
        data-testid="network__option"
      >
        <li
          class="inline-block mr-5 cursor-pointer"
          data-testid="network__option--0"
        >
          <div
            class="sc-AxiKw jQtkkF relative border-theme-success-500 text-theme-success-500"
          >
            <div
              class="sc-AxjAm buCJuk"
              height="20"
              width="20"
            >
              <svg>
                ark.svg
              </svg>
            </div>
            <span
              class="sc-AxirZ nnMcM flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle absolute bg-theme-background border-transparent -bottom-1 -right-4 bg-theme-success-500 text-theme-success-contrast"
            >
              <div
                class="sc-AxjAm HWmvM"
                height="12"
                width="12"
              >
                <svg>
                  checkmark.svg
                </svg>
              </div>
              <span />
            </span>
          </div>
        </li>
        <li
          class="inline-block mr-5 cursor-pointer"
          data-testid="network__option--1"
        >
          <div
            class="sc-AxiKw jQtkkF relative border-theme-success-500 text-theme-success-500"
          >
            <div
              class="sc-AxjAm buCJuk"
              height="20"
              width="20"
            >
              <svg>
                eth.svg
              </svg>
            </div>
            <span
              class="sc-AxirZ nnMcM flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle absolute bg-theme-background border-transparent -bottom-1 -right-4 bg-theme-success-500 text-theme-success-contrast"
            >
              <div
                class="sc-AxjAm HWmvM"
                height="12"
                width="12"
              >
                <svg>
                  checkmark.svg
                </svg>
              </div>
              <span />
            </span>
          </div>
        </li>
        <li
          class="inline-block mr-5 cursor-pointer"
          data-testid="network__option--2"
        >
          <div
            class="sc-AxiKw jQtkkF relative border-theme-neutral-200 text-theme-neutral-300"
          >
            <div
              class="sc-AxjAm buCJuk"
              height="20"
              width="20"
            >
              <svg>
                btc.svg
              </svg>
            </div>
            <span
              class="sc-AxirZ nnMcM flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle absolute bg-theme-background border-transparent border-theme-neutral-200 -bottom-1 -right-4"
            >
              <span />
            </span>
          </div>
        </li>
      </ul>
      <div
        class="sc-AxiKw jQtkkF relative ml-2 cursor-pointer border-theme-primary-100"
        data-testid="network__viewall"
      >
        <div
          class="text-sm font-semibold text-theme-primary-500"
        >
          All
        </div>
        <span
          class="sc-AxirZ nnMcM flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle absolute bg-theme-background border-transparent border-theme-primary-100 -bottom-1 -right-4 text-theme-primary-500"
        >
          <div
            class="sc-AxjAm kzGOk"
            height="18"
            width="18"
          >
            <svg>
              chevron-down.svg
            </svg>
          </div>
          <span />
        </span>
      </div>
    </div>
    <div
      class="border-t border-1 border-theme-neutral-200 border-dotted my-8"
    />
    <div
      class="flex flex-row mb-8"
    >
      <div
        class="w-4/5"
      >
        <div
          class="mb-3 font-semibold text-theme-neutral-700"
        >
          Your Wallets
        </div>
        <div
          class="text-sm text-theme-neutral-500"
        >
          Select the display of your wallets
        </div>
      </div>
      <div
        class="w-1/5 text-right"
      >
        <div
          class="relative h-6 mt-3 mr-5 cursor-pointer text-theme-neutral-700"
          data-testid="filter-wallets__wallets"
        >
          <span
            class="font-semibold inline-block pr-1"
          >
            All
          </span>
          <span
            class="sc-AxirZ nnMcM flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle absolute bg-theme-background border-transparent top-1 -right-6"
          >
            <div
              class="sc-AxjAm dXzKNE"
              height="19"
              width="19"
            >
              <svg>
                chevron-down.svg
              </svg>
            </div>
            <span />
          </span>
        </div>
      </div>
    </div>
    <div
      class="border-t border-1 border-theme-neutral-200 border-dotted my-8"
    />
    <div
      class="flex flex-row mb-6"
    >
      <div
        class="w-4/5"
      >
        <div
          class="mb-3 font-semibold text-theme-neutral-700"
        >
          Portfolio Chart
        </div>
        <div
          class="text-sm text-theme-neutral-500"
        >
          You an hide this unit if you like
        </div>
      </div>
      <div
        class="w-1/5 pt-3 text-right"
      >
        <label>
          <input
            class="sc-AxhCb crfxJX"
            data-testid="filter-wallets_toggle--portfolio"
            type="checkbox"
          />
          <div
            class="sc-AxhUy gvyvto"
          >
            <span
              class="sc-AxgMl gXZfaE"
            />
          </div>
        </label>
      </div>
    </div>
    <div
      class="flex flex-row mb-4"
    >
      <div
        class="w-4/5"
      >
        <div
          class="mb-3 font-semibold text-theme-neutral-700"
        >
          Transaction History
        </div>
        <div
          class="text-sm text-theme-neutral-500"
        >
          You can hide this unit if you like
        </div>
      </div>
      <div
        class="w-1/5 pt-3 text-right"
      >
        <label>
          <input
            class="sc-AxhCb crfxJX"
            data-testid="filter-wallets_toggle--transactions"
            type="checkbox"
          />
          <div
            class="sc-AxhUy gvyvto"
          >
            <span
              class="sc-AxgMl gXZfaE"
            />
          </div>
        </label>
      </div>
    </div>
  </div>
</div>
`;
